fix: main page not centered

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -303,6 +303,7 @@ header {
 .content {
     flex-grow: 1;
     display: flex;
+    justify-content: center;
 }
 
 footer {
